--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <title>DataMinim - Data Analytic</title>
 </head>
 
-<body class="bg-primary">
+<body>
   <div id="root"></div>
   <script type="module" src="/src/main.jsx"></script>
 </body>
